--- a/proiect/assets/css/style.css
+++ b/proiect/assets/css/style.css
@@ -1,3 +1,18 @@
+/*Font*/
+@font-face {
+    font-family: 'Sevillana';
+    src: url('../fonts/Sevillana-Regular.eot');
+    src: url('../fonts/Sevillana-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Sevillana-Regular.woff2') format('woff2'),
+        url('../fonts/Sevillana-Regular.woff') format('woff'),
+        url('../fonts/Sevillana-Regular.ttf') format('truetype'),
+        url('../fonts/Sevillana-Regular.svg#Sevillana-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 .logo{
     width: 100%;
     max-width: 300px;
@@ -31,6 +46,11 @@ nav ul li a{
     font-size: 30px;
     color: white;
     text-decoration: none;
+    /*FONT*/
+    font-family: "Sevillana", cursive;
+    font-weight: 400;
+    font-style: normal;
+    /*FONT*/
 }
 /* END HEADER */
 
@@ -60,3 +80,6 @@ nav ul li a{
     display: inline;
     margin: 20px;
 }
+
+   
+  
